# kg-llm-interface

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-version-compatibility.yml
aikg/: models.py  server.py
aikg/config/: __init__.py  base.yaml  chat.py  chroma.py  common.py  llm.yaml  prompt.yaml  sparql.py
aikg/flows/: chroma_build.py  chroma_examples.py  insert_triples.py
aikg/notebooks/: nl_sparql.ipynb  prompt_llama.ipynb  rdf_llama_index.ipynb  sphn_example.ipynb
aikg/pipeline/: chroma_build.py  prompt_llm.py
aikg/utils/: chat.py  chroma.py  io.py  llm.py  rdf.py
data/: test_data.trig
k8s/: README.md
k8s/base/: kustomization.yaml
k8s/base/chatllm/: deployment.yaml  kustomization.yaml  service.yaml
k8s/base/chroma/: configmap.yaml  deployment.yaml  kustomization.yaml  params.env  pvc.yaml  service.yaml
k8s/base/graphdb/: configmap.yaml  deployment.yaml  kustomization.yaml  params.env  pvc.yaml  service.yaml
k8s/base/kg-llm/: deployment.yaml  kustomization.yaml  params.env  pvc.yaml  service.yaml
k8s/overlays/custom-config/: entrypoint.sh  kustomization.yaml  params.env
k8s/overlays/data-retriever/: repository_config.ttl
kubernetes/: README.md  kustomization.yaml
kubernetes/base/chatllm/: params.env
kubernetes/base/chroma/: configmaps.yaml  deployment.yaml  deployment.yaml.save  kustomization.yaml  params.env  pvcs.yaml  service.yaml
kubernetes/base/graphdb/: kustomization.yaml  params.env  pvc.yaml
kubernetes/base/kg-llm/: deployment.yaml  kustomization.yaml  params.env  service.yaml
kubernetes/chatllm/: deployment.yaml  kustomization.yaml  service.yaml
kubernetes/chroma/: deployment.yaml  kustomization.yaml  pvcs.yaml  service.yaml
kubernetes/fuseki/: deployment.yaml  kustomization.yaml  params.env  service.yaml
kubernetes/graphdb/: kustomization.yaml  service.yaml
kubernetes/kg-llm/: deployment.yaml  kustomization.yaml  params.env  service.yaml
kubernetes/overlays/data-retriever/: entrypoint.sh  job.yaml  kustomization.yaml  params.env
scripts/: standalone_server.sh
tests/: .test.env  chat.test.yml  conftest.py  test_chroma_flow.py  test_load_data.py  test_rdf.py
