[tool.poetry]
name = "aikg"
version = "0.1.0"
description = "Langchain-powered natural language interface to RDF knowledge-graphs"
authors = ["cyril.matthey-doret <cyril.matthey-doret@epfl.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aikg"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
transformers = "^4.28.1"
python-dotenv = "^1.0.0"
ipykernel = "^6.22.0"
llama-index = "0.6.0.alpha3"
rdflib = "6.3.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.3.21"
more-itertools = "^9.1.0"
prefect = "^2.10.6"
typer = "^0.7.0"
prefect-dask = "^0.2.4"
bokeh = "2.4.3"
sparqlwrapper = "^2.0.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
pyllamacpp = "^2.3.0"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
