[tool.poetry]
name = "aikg"
version = "0.1.0"
description = "Langchain-powered natural language interface to RDF knowledge-graphs"
authors = ["cyril.matthey-doret <cyril.matthey-doret@epfl.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aikg"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
transformers = "^4.28.1"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
python-dotenv = "^1.0.0"
ipykernel = "^6.22.0"
rdflib = "6.3.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.22"
more-itertools = "^9.1.0"
prefect = "^2.10.6"
typer = "^0.9.0"
bokeh = "2.4.3"
sparqlwrapper = "^2.0.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
typing-extensions = "^4.6.3"
protobuf = "3.20"
jupyterlab = "^4.0.2"
langchain = "^0.0.230"
openai = "^0.27.8"
poethepoet = "^0.21.0"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Until poetry provides a better solution: https://stackoverflow.com/a/66644457/8440675
[tool.poe.tasks]
force-cuda11 = "python -m pip install torch torchvision -f https://download.pytorch.org/whl/cu117"
